<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.PermissionsFragment">
    <TextView
            android:id="@+id/permissionsFragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/white"
            android:textSize="36dp"
            android:paddingTop="32dp"
            android:layout_centerHorizontal="true"
            android:text="@string/permissions"/>

    <TextView
            android:id="@+id/permissionsFragmentDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/permissionsFragmentTitle"
            android:text="@string/permissions_detail"/>



    <TextView
            android:id="@+id/storagePermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="left"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/permissionsFragmentDetail"
            android:text="@string/permission_storage"/>




    <TextView
            android:id="@+id/grantPermissionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:padding="20dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/grant_permissions"/>

</RelativeLayout>