<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:background="@color/white_popupBg"
                android:layout_width="320dp"
                android:layout_height="220dp">
    <ScrollView
            android:layout_alignParentTop="true"
            android:layout_above="@+id/dialog_close"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/title_dialog"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    style="@style/RobotoRegularText"
                    android:textSize="20dp"
                    tools:text="@string/enter_password"/>

            <TextView
                    android:id="@+id/message_dialog"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    style="@style/RobotoRegularText"
                    tools:text="Enter password which has been used for encryption of currently imported images."/>

        </LinearLayout>
    </ScrollView>
    <TextView
            android:id="@+id/dialog_close"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:text="@string/cancel"
            style="@style/RobotoRegularText"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>
    <TextView
            android:id="@+id/dialog_ok"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="right"
            android:text="@string/confirm"
            style="@style/RobotoRegularText"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>